# tephra

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  e2e.yml
docs/: DESIGN.md
docs/plans/: 2026-07-03-v1-implementation.md
docs/reference/prototype/: mem.sh  memory-bridge.sh  test-harness.sh
e2e/: .dockerignore  Dockerfile.remote  Dockerfile.tephra  compose.yml  human-sim.sh  remote-entrypoint.sh  scenario.sh
src/: agent.rs  bridge.rs  config.rs  doctor.rs  gitx.rs  init.rs  lib.rs  main.rs  notify.rs  obsidian.rs  service.rs
templates/: AGENTS.md
tests/: agent.rs  agent_init.rs  bridge.rs  doctor.rs  gitx.rs  init.rs  obsidian.rs  service.rs  watch.rs
tests/common/: mod.rs
tests/golden/: launchd.plist  obsidian-launchd-node-pinned.plist  obsidian-launchd.plist  obsidian-systemd-node-pinned.service  obsidian-systemd.service  systemd.service  systemd.timer
