[package]
name = "tephra"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
