[package]
name = "tephra"
version = "0.1.0"
edition = "2021"
exclude = ["docs/plans", "docs/reference", "e2e", ".github"]
description = "Layered memory for humans and their agents — a git bridge for synced note vaults"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trentdavies/tephra"
readme = "README.md"
keywords = ["obsidian", "agents", "notes", "sync", "git"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
